--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css"
             integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
         <style>
+            body{
+                background-color: #adefd1ff;
+            }
             #loading,#results{
                 display: none;
             }
@@ -16,10 +19,26 @@
                 width: 100px;
                 height: 100px;
             }
+            .btn{
+                background: #00203fff;
+                color: #fff;
+                font-weight: 700;
+                font-size: 1.2rem;
+                transition: transition 0.8s;
+            }
+            .btn:hover{
+                transform: scale(0.9878);
+            }
+            .heading{
+                color: #00203fff;
+            }
+            .form-control, .input-group-addon {
+                border: 1px solid #00203fff;
+            }
         </style>
     </head>
 
-    <body class="bg-dark">
+    <body >
         <div class="container">
             <div class="row">
                 <div class="col-md-6 mx-auto">
@@ -42,7 +61,7 @@
                                 <input type="number" class="form-control" id="years" placeholder="Years To Repay">
                             </div>
                             <div class="form-group">
-                                <input type="submit" value="Calculate" class="btn btn-dark btn-block">
+                                <input type="submit" value="Calculate" class="btn btn-block">
                             </div>
                         </form>
 
